--- a/app/templates/auth/partials/validate_account.html
+++ b/app/templates/auth/partials/validate_account.html
@@ -1,13 +1,13 @@
-<section id="content-area">
-    <div class="container">
-        <div class="row text-center">
-            <h1 class="info2"><i class="ion-ios-checkmark"></i> Registro correcto</h1>
-            <p class="send-email">Hemos enviado a tu correo electrónico un código de verificación.
-                Por favor ingresa a tu correo para activar tu cuenta <br>
-            ¿Ya has validado tu cuenta?</p>
-            <a ui-sref="register" class="btn btn-gray-clear">Ingresa</a>
-            <br><br>
-            <img src="../../../img/logo.jpg" alt="" width="150">
+<div class="temp-validate-account">
+    <section class="content-area">
+        <div class="container">
+            <div class="text-center">
+                <h1><i class="ion-ios-checkmark"></i> Registro correcto</h1><br>
+                <p>Hemos enviado a tu correo electrónico un código de verificación.<br>
+                    Por favor ingresa a tu correo para activar tu cuenta <br>
+                    ¿Ya has validado tu cuenta?</p>
+                <a ui-sref="register" class="btn btn-outline-danger">Iniciar sesión</a> <br><br>
+            </div>
         </div>
-    </div>
-</section>
+    </section>
+</div>
