--- a/app/css/core/navs.styl
+++ b/app/css/core/navs.styl
@@ -31,6 +31,8 @@
     padding 15px 0
     background-color transparent
     border-bottom 1px solid #ddd
+    .dropdown-menu
+      margin-top -10px
     .list-icons-add
       li
         i
