--- a/app/templates/auth/address-new.html
+++ b/app/templates/auth/address-new.html
@@ -1,119 +1,135 @@
-<section class="content-dashboard">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-3">
-                <ng-include src="'/templates/auth/partials/my-account-items.html'"></ng-include>
-            </div>
-            <div class="col-md-9 contact-section">
-                <div class="col-md-12 title-post">
-                    <h3 class="info2" ng-if="Address.create"><i class="ion-clipboard"></i> Agregar dirección</h3>
-                    <h3 class="info2" ng-if="!Address.create"><i class="ion-compose"></i> Actualizar dirección</h3>
-                    <hr/>
+<div class="temp-dashboard">
+    <section class="content-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+                    <ng-include src="'/templates/auth/partials/my-account-items.html'"></ng-include>
                 </div>
-                <div class="col-md-12">
-                    <form class="padding form-horizontal" name="Form"
-                          ng-submit="Address.submitForm()" novalidate>
-                        <div class="col-xs-12 col-md-6">
-                            <div class="form-item">
-                                <label for="state">Estado</label>
-                                <ui-select on-select="Address.getCitiesByState($model)"
-                                           title="Estado" ng-model="Address.formData.state"
-                                           name="states"
-                                           id="state" required>
-                                    <ui-select-match placeholder="Selecciona un Estado *..."
-                                                     allow-clear="true">
-                                        {{$select.selected.name}}
-                                    </ui-select-match>
-                                    <ui-select-choices
-                                            repeat="state.id as state in Address.states | filter: {name: $select.search}">
-                                        <div ng-bind-html="state.name | highlight: $select.search"></div>
-                                    </ui-select-choices>
-                                </ui-select>
-                            </div>
+                <div class="col-md-9">
+                    <div class="items-dashboard">
+                        <div class="col-md-12">
+                            <h4 ng-if="Address.create"><i class="ion-clipboard"></i> Agregar dirección</h4>
+                            <h4 ng-if="!Address.create"><i class="ion-compose"></i> Actualizar dirección</h4>
+                            <hr/>
                         </div>
-                        <div class="col-xs-12 col-md-6">
-                            <div class="form-item">
-                                <label for="city">Ciudad</label>
-                                <ui-select ng-model="Address.formData.city" id="city" name="cities"
-                                           ng-required="Address.formData.state" ng-disabled="Address.busyCity"
-                                           title="Ciudad" required>
-                                    <ui-select-match placeholder="Selecciona una Ciudad *..." allow-clear="true">
-                                        {{$select.selected.name}}
-                                    </ui-select-match>
-                                    <ui-select-choices
-                                            repeat="city.id as city in Address.cities | filter: {name: $select.search}">
-                                        <div ng-bind-html="city.name | highlight: $select.search"></div>
-                                    </ui-select-choices>
-                                </ui-select>
-                            </div>
-                        </div>
-                        <div class="col-xs-12 col-md-6 clearfix">
-                            <div class="form-item"
-                                 ng-class="{ 'has-error': Form.address.$touched && Form.address.$invalid }">
-                                <label for="address">Dirección</label>
-                                <input ng-model="Address.formData.address" type="text"
-                                       class="form-control" id="address" name="address"
-                                       placeholder="Dirección"
-                                       required>
-                                <span ng-messages="Form.address.$error" ng-if="Form.address.$touched">
+                        <div class="col-md-12">
+                            <form class="padding form-horizontal" name="Form"
+                                  ng-submit="Address.submitForm()" novalidate>
+                                <div class="row">
+                                    <div class="col-xs-12 col-sm-6">
+                                        <div class="form-group">
+                                            <label for="state">Estado</label>
+                                            <ui-select on-select="Address.getCitiesByState($model)"
+                                                       title="Estado" ng-model="Address.formData.state"
+                                                       name="states"
+                                                       id="state" required>
+                                                <ui-select-match placeholder="Selecciona un Estado *..."
+                                                                 allow-clear="true">
+                                                    {{$select.selected.name}}
+                                                </ui-select-match>
+                                                <ui-select-choices
+                                                        repeat="state.id as state in Address.states | filter: {name: $select.search}">
+                                                    <div ng-bind-html="state.name | highlight: $select.search"></div>
+                                                </ui-select-choices>
+                                            </ui-select>
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-12 col-ms-6">
+                                        <div class="form-item">
+                                            <label for="city">Ciudad</label>
+                                            <ui-select ng-model="Address.formData.city" id="city" name="cities"
+                                                       ng-required="Address.formData.state"
+                                                       ng-disabled="Address.busyCity"
+                                                       title="Ciudad" required>
+                                                <ui-select-match placeholder="Selecciona una Ciudad *..."
+                                                                 allow-clear="true">
+                                                    {{$select.selected.name}}
+                                                </ui-select-match>
+                                                <ui-select-choices
+                                                        repeat="city.id as city in Address.cities | filter: {name: $select.search}">
+                                                    <div ng-bind-html="city.name | highlight: $select.search"></div>
+                                                </ui-select-choices>
+                                            </ui-select>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-xs-12 col-sm-6 clearfix">
+                                        <div class="form-item"
+                                             ng-class="{ 'has-error': Form.address.$touched && Form.address.$invalid }">
+                                            <label for="address">Dirección</label>
+                                            <input ng-model="Address.formData.address" type="text"
+                                                   class="form-control" id="address" name="address"
+                                                   placeholder="Dirección"
+                                                   required>
+                                            <span ng-messages="Form.address.$error" ng-if="Form.address.$touched">
                                                     <a ng-message="required" data-toggle="tooltip" title="Holiis"></a>
                                                 </span>
-                            </div>
-                        </div>
-                        <div class="col-xs-12 col-md-6">
-                            <div class="form-item"
-                                 ng-class="{ 'has-error': Form.neighborhood.$touched && Form.neighborhood.$invalid }">
-                                <label for="neighborhood">Colonia</label>
-                                <input ng-model="Address.formData.neighborhood" type="text" class="form-control"
-                                       id="neighborhood"
-                                       name="neighborhood"
-                                       placeholder="Colonia"
-                                       required>
-                            </div>
-                        </div>
-                        <div class="col-xs-12 col-md-6">
-                            <div class="form-item" ng-class="{ 'has-error': Form.zip.$touched && Form.zip.$invalid }">
-                                <label for="zip">Código Postal</label>
-                                <input ng-model="Address.formData.zip" type="text" ng-pattern="/^[0-9]{5}$/"
-                                       maxlength="5" class="form-control" id="zip" name="zip"
-                                       placeholder="Código Postal"
-                                       required>
-                            </div>
-                        </div>
-                        <div class="col-xs-12 col-md-6">
-                            <div class="form-item"
-                                 ng-class="{ 'has-error': Form.phone.$touched && Form.phone.$invalid }">
-                                <label for="phone">Teléfono</label>
-                                <input ng-model="Address.formData.phone" type="text" maxlength="20" class="form-control"
-                                       id="phone"
-                                       name="phone"
-                                       placeholder="Teléfono" required>
-                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-12 col-sm-6">
+                                        <div class="form-item"
+                                             ng-class="{ 'has-error': Form.neighborhood.$touched && Form.neighborhood.$invalid }">
+                                            <label for="neighborhood">Colonia</label>
+                                            <input ng-model="Address.formData.neighborhood" type="text"
+                                                   class="form-control"
+                                                   id="neighborhood"
+                                                   name="neighborhood"
+                                                   placeholder="Colonia"
+                                                   required>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-xs-12 col-sm-6">
+                                        <div class="form-item"
+                                             ng-class="{ 'has-error': Form.zip.$touched && Form.zip.$invalid }">
+                                            <label for="zip">Código Postal</label>
+                                            <input ng-model="Address.formData.zip" type="text" ng-pattern="/^[0-9]{5}$/"
+                                                   maxlength="5" class="form-control" id="zip" name="zip"
+                                                   placeholder="Código Postal"
+                                                   required>
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-12 col-sm-6">
+                                        <div class="form-item"
+                                             ng-class="{ 'has-error': Form.phone.$touched && Form.phone.$invalid }">
+                                            <label for="phone">Teléfono</label>
+                                            <input ng-model="Address.formData.phone" type="text" maxlength="20"
+                                                   class="form-control"
+                                                   id="phone"
+                                                   name="phone"
+                                                   placeholder="Teléfono" required>
+                                        </div>
 
-                        </div>
-                        <div class="col-xs-12 col-md-6">
-                            <div class="form-item"
-                                 ng-class="{ 'has-error': Form.mobile.$touched && Form.mobile.$invalid }">
-                                <label for="mobile">Celular</label>
-                                <input ng-model="Address.formData.mobile" type="text" ng-maxlength="20"
-                                       class="form-control" id="mobile"
-                                       name="mobile"
-                                       placeholder="Celular" required>
-                            </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-xs-12 col-sm-6">
+                                        <div class="form-item"
+                                             ng-class="{ 'has-error': Form.mobile.$touched && Form.mobile.$invalid }">
+                                            <label for="mobile">Celular</label>
+                                            <input ng-model="Address.formData.mobile" type="text" ng-maxlength="20"
+                                                   class="form-control" id="mobile"
+                                                   name="mobile"
+                                                   placeholder="Celular" required>
+                                        </div>
 
+                                    </div>
+                                    <div class="col-sm-6 text-right" style="padding-top: 30px;">
+                                        <button class="btn btn-outline-default" ui-sref="address">Cancelar</button>
+                                        <button type="submit" class="btn btn-danger"
+                                                ng-disabled="Address.busy">
+                                            <i class="ion-android-done"></i> Guardar <span ng-if="Address.busy"><i
+                                                class="fa fa-spinner fa-spin"></i></span>
+                                        </button>
+                                    </div>
+                                </div>
+                            </form>
                         </div>
-                        <div class="col-md-12 text-center" style="padding-top: 30px;">
-                            <button type="submit" class="btn btn-blue"
-                                    ng-disabled="Address.busy">
-                                <i class="ion-android-done"></i> Guardar <span ng-if="Address.busy"><i
-                                    class="fa fa-spinner fa-spin"></i></span>
-                            </button>
-                            <button class="btn btn-blue" ui-sref="address">Cancelar</button>
-                        </div>
-                    </form>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
-
+    </section>
+</div>
