--- a/app/templates/auth/partials/account_activated.html
+++ b/app/templates/auth/partials/account_activated.html
@@ -1,10 +1,9 @@
-<section id="content-area">
+<section class="content-area">
     <div class="container">
-        <div class="row text-center">
+        <div class="text-center">
             <h1 class="info2"><i class="ion-ios-checkmark"></i> Cuenta activada correctamente</h1>
-            <p><a class="btn btn-gray-clear" ui-sref="register">Iniciar Sesión</a></p>
+            <p><a class="btn btn-outline-red" ui-sref="register">Iniciar Sesión</a></p>
             <br>
-            <img src="../../../img/logo.jpg" alt="" width="150">
         </div>
     </div>
 </section>
