--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -1,76 +1,80 @@
-<div class="header-title-page">
-    <div class="container">
-        <h1 class="prod-title col-md-12">Contáctanos</h1>
+<div class="temp-contact">
+    <div class="header-title-page">
+        <div class="container">
+            <h1 class="prod-title col-md-12">Contáctanos</h1>
+        </div>
     </div>
-</div>
-<section id="content-area">
-    <div class="container">
-        <div class="contact-section">
-            <div class="social-media">
+    <section id="content-area">
+        <div class="container">
+            <div class="row">
                 <div class="col-md-6">
-                    <div class="social box-bordered">
-                        <ul class="list">
-                            <li ng-repeat="post in contactMenuData">
-                                <a class="contact-foo-side" href="{{ post.excerpt }}"><i
-                                        class="{{ post.title }}"></i> <span
-                                        ng-bind-html="post.content | trustHtml"></span></a>
-                            </li>
-                        </ul>
-
-                        <ul class="list list-sidebar">
-                            <!--<li ng-repeat="item in mainNavMenu">-->
-                            <li ng-repeat="item in NavMenuSocial">
-                                <a href="{{ item.link }}" target="_blank"><i class="{{ item.name }}"
-                                                                             data-pack="social"></i></a>
-                            </li>
-                        </ul>
-                        <ul class="list-social-media text-left">
-                            <li ng-repeat="post in socialMedia">
-                                <a class="contact-foo-side" href="{{ post.excerpt }}"><i class="{{ post.title }}"></i> <span
-                                        ng-bind-html="post.content | trustHtml"></span></a>
-                            </li>
-                        </ul>
+                    <div class="list-icons-add" ng-repeat="post in contactData">
+                        <a class="nav-link" href="{{ post.excerpt }}"><i class="{{ post.title }}"></i>
+                            <span ng-bind-html="post.content | trustHtml"></span></a>
+                    </div>
+                    <hr>
+                    <h4 class="widget-title">Síguenos en</h4>
+                    <hr>
+                    <div class="row">
+                        <div class="col-sm-6 list-icons-add" ng-repeat="social in socialMedia">
+                            <a class="nav-link" href="{{ social.excerpt }}"><i class="{{ social.title }}"></i> <span
+                                    ng-bind-html="social.content | trustHtml"></span></a>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <form class="form-horizontal" ng-submit="Contact.createNotification('CONTACT_FORM')"
                           ng-init="Contact.notification.subject = 'Formulario de contacto'">
-                        <div class="box-bordered container-fluid">
-                        <div class="col-md-6">
-                                <label for="name">Nombre *</label>
+                        <div class="container-fluid">
+                            <div class="row">
+                                <div class="col-sm-12">
+                                    <div class="form-group">
+                                        <label for="name">Nombre *</label>
 
-                                <input type="text" class="form-control" id="name" name="name" placeholder="Nombre"
-                                       required ng-model="Contact.notification.name">
-
-                                <label for="email">Email *</label>
-
-                                <input type="email" class="form-control" id="email" name="email"
-                                       placeholder="Email" required
-                                       ng-model="Contact.notification.email">
-
-
-                                <label for="phone">Teléfono *</label>
-                                <input type="text" class="form-control" id="phone" name="phone"
-                                       placeholder="Teléfono" required ng-model="Contact.notification.phone">
+                                        <input type="text" class="form-control" id="name" name="name"
+                                               placeholder="Nombre"
+                                               required ng-model="Contact.notification.name">
+                                    </div>
+                                </div>
                             </div>
-                            <div class="col-md-6">
-                                <label for="email">Escribe tu mensaje *</label>
-                                <textarea class="form-control" id="message" name="message" rows="7"
-                                          placeholder="Escribe tu mensaje *" required
-                                          ng-model="Contact.notification.message"></textarea>
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <div class="form-group">
+                                        <label for="email">Email *</label>
 
-                                <div style="text-align: right;">
-                                    <button type="submit" class="btn btn-cart" ng-disabled="Contact.busy">
-                                        Enviar <span ng-if="Contact.busy"><i
-                                            class="fa fa-spinner fa-spin"></i></span>
-                                    </button>
-
+                                        <input type="email" class="form-control" id="email" name="email"
+                                               placeholder="Email" required
+                                               ng-model="Contact.notification.email">
+                                    </div>
+                                </div>
+                                <div class="col-sm-6">
+                                    <div class="form-group">
+                                        <label for="phone">Teléfono *</label>
+                                        <input type="text" class="form-control" id="phone" name="phone"
+                                               placeholder="Teléfono" required ng-model="Contact.notification.phone">
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </form>
+                        <div class="col-md-12">
+                            <label for="email">Escribe tu mensaje *</label>
+                            <textarea class="form-control" id="message" name="message" cols="10" rows="10"
+                                      placeholder="Escribe tu mensaje *" required
+                                      ng-model="Contact.notification.message"></textarea>
+
+                            <div style="text-align: right;">
+                                <button type="submit" class="btn btn-danger" ng-disabled="Contact.busy">
+                                    Enviar <span ng-if="Contact.busy"><i
+                                        class="fa fa-spinner fa-spin"></i></span>
+                                </button>
+
+                            </div>
+                        </div>
                 </div>
+                </form>
             </div>
         </div>
-    </div>
+</div>
+</div>
 </section>
+</div>
