--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -51,7 +51,7 @@
                             <button class="btn btn-danger"
                                     ng-click="Shop.setItem({id: product.id, image: product.featuredImage.url,
                            name: product.name, price: product.price, qty: 1,taxonomies : product.taxonomies}, 1)"
-                                    ng-disabled="Shop.itemInCart(product)">Ver más
+                                    ng-disabled="Shop.itemInCart(product)">Comprar
                             </button>
                         </div>
                     </div>
