--- a/app/templates/shop/shopcart.html
+++ b/app/templates/shop/shopcart.html
@@ -1,79 +1,106 @@
-<div class="header-title">
-    <h2 class="title text-center">Carrito de compras</h2>
-</div>
-<section class="content-area2" class="shop-cart">
-    <div class="container">
-        <div ng-if="ShopCart.items.length==0" class="text-center">
-            <h3 class="info"><i class="fa fa-warning"></i> No se han agregado productos al carrito</h3>
-            <a class="btn btn-gray-clear" ui-sref="home">Ver productos</a>
-        </div>
-        <div class="row" ng-if="ShopCart.items.length>0">
-            <div class="col-sm-3 col-md-2 pull-right text-right">
-                <div class="clear-cart">
-                    <button class="btn btn-gray-clear" ng-click="ShopCart.clearCart()">Vaciar Carrito</button>
+<div class="temp-shopcart">
+    <section class="content-area">
+        <div class="container">
+            <div class="row text-center" ng-if="ShopCart.items.length==0">
+                <div class="col-md-8 offset-md-2 text-center">
+                    <div class="alert alert-warning" role="alert">
+                        <h4><i class="fa fa-warning"></i> No se han agregado productos al carrito</h4>
+                        <br>
+                        <a class="btn btn-outline-danger" ui-sref="home">Ver productos</a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <hr>
-        <div class="container-fluid" ng-if="ShopCart.items.length>0">
-            <div class="col-md-9 text-center">
-                <div class="product-cart col-sm-6 col-md-12" ng-repeat="product in ShopCart.items">
-                    <div class="col-sm-12 col-md-3">
-                        <div class="shopcart-img">
-                            <div class="shopcart-img" style="background-image: url('{{product.image ? product.image : initConfig.img_default}}')"></div>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-5">
-                        <div class="shopcart-descrip">
-                            <h4>{{ product.name }}</h4>
-                            <h3>{{ product.price | currency }}</h3>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-2">
-                            <div class="shopcart-qty">
-                                <label for="qty">Cantidad</label>
-                                <input type="number" min="0" id="qty" ng-model="product.qty" ng-click="ShopCart.setItem({id: product.id, name: product.name, price: product.price, qty: product.qty}, product.qty)"
-                                    class="form-control cart-qty" placeholder="{{ product.qty }}">
+            <div class="row justify-content-between" ng-if="ShopCart.items.length>0">
+                <div class="col-4">
+                    <h3><i class="fa fa-shopping-cart"></i> Carrito de compras</h3>
+                </div>
+                <div class="col-4 text-right" ng-if="ShopCart.items.length>0">
+                    <button class="btn btn-outline-dark" ng-click="ShopCart.clearCart()">Vaciar Carrito</button>
+                </div>
+            </div>
+            <hr>
+            <div class="container-fluid" ng-if="ShopCart.items.length>0">
+                <div class="row">
+                    <div class="col-md-9 text-center">
+                        <div class="col-sm-6 col-md-12">
+                            <div class="row">
+                                <div class="col-sm-12 col-md-3">
+                                    <small>Articulo</small>
+                                </div>
+                                <div class="col-sm-12 col-md-5">
+                                    <small>Descripción</small>
+                                </div>
+                                <div class="col-sm-12 col-md-2">
+                                    <small>Cantidad</small>
+                                </div>
+                                <div class="col-md-1 visible-lg">
+                                </div>
                             </div>
-                        <div class="col-sm-12 hidden-lg">
-                            <div class="shopcart-delete-sm">
-                                <a class="ion-ios-close-outline" ng-click="ShopCart.removeItem(product)" title="Eliminar producto"></a>
-                            </div>
                         </div>
                     </div>
-                    <div class="col-md-1 visible-lg">
-                        <div class="shopcart-delete-lg">
-                            <a class="ion-ios-close-outline" ng-click="ShopCart.removeItem(product)" title="Eliminar producto"></a>
-                        </div>
-                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="container-fluid" ng-if="ShopCart.items.length>0">
+                <div class="row">
+                    <div class="col-md-9 text-center">
+                        <div class="col-sm-6 col-md-12" ng-repeat="product in ShopCart.items">
+                            <div class="row">
+                                <div class="col-sm-12 col-md-3">
+                                    <div class="shopcart-img"
+                                         style="background-image: url('{{product.image ? product.image : initConfig.img_default}}')"></div>
+                                </div>
+                                <div class="col-sm-12 col-md-5">
+                                    <div class="shopcart-description">
+                                        <h4>{{ product.name }}</h4>
+                                        <h3>{{ product.price | currency }}</h3>
+                                    </div>
+                                </div>
+                                <div class="col-sm-12 col-md-2">
 
-                </div>
-            </div>
-            <div class="col-sm-12 col-md-3 excerpt-shopping">
-                <div class="details-prod">
-                    <h4 class="text-center">Resumen de pedido</h4>
-                    <div class="table-responsive">
-                        <table class="table table-striped">
-                            <tbody>
-                                <tr>
-                                    <td>Subtotal({{ items.length }})</td>
-                                    <td>{{ ShopCart.total | currency}}</td>
-                                </tr>
-                                <tr>
-                                    <td>Envío</td>
-                                    <td>$0</td>
-                                </tr>
-                                <tr>
-                                    <td>Total</td>
-                                    <td>{{ ShopCart.total | currency}}</td>
-                                </tr>
-                            </tbody>
-                        </table>
+                                    <div class="shopcart-qty">
+                                        <input type="number" min="0" id="qty" ng-model="product.qty"
+                                               ng-click="ShopCart.setItem({id: product.id, name: product.name, price: product.price, qty: product.qty},
+                                               product.qty)"
+                                               class="form-control cart-qty" placeholder="{{ product.qty }}">
+                                    </div>
+                                </div>
+                                <div class="col-md-1 visible-lg">
+                                    <div class="shopcart-delete-lg">
+                                        <a class="ion-ios-close-outline" ng-click="ShopCart.removeItem(product)"
+                                           title="Eliminar producto"></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <!--<a class="btn btn-success btn-paypal btn-block"><i class="fa fa-paypal"></i> Pagar con Paypal</a>-->
-                    <a class="btn btn-orange btn-block" ng-click="ShopCart.processPurchase()"><i class="fa fa-credit-card"></i> Procesar compra</a>
+                    <div class="col-sm-12 col-md-3 excerpt-shopping">
+                        <div class="details-prod">
+                            <h4 class="text-center">Resumen de pedido</h4>
+                            <div class="table-responsive">
+                                <table class="table table-striped">
+                                    <tbody>
+                                    <tr>
+                                        <td>Subtotal({{ items.length }})</td>
+                                        <td>{{ ShopCart.total | currency}}</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Envío</td>
+                                        <td>$0</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Total</td>
+                                        <td>{{ ShopCart.total | currency}}</td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                            <button class="btn btn-danger btn-block" ng-click="ShopCart.processPurchase()"><i
+                                    class="fa fa-credit-card"></i> Procesar compra</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
+</div>
